--- a/ImmediatePhotoRecorder/Base.lproj/Main.storyboard
+++ b/ImmediatePhotoRecorder/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Login View Controller-->
         <scene sceneID="hzp-rD-D97">
             <objects>
-                <viewController id="JbB-Zn-rgF" customClass="LoginViewController" customModule="ImmediatePhotoRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="JbB-Zn-rgF" customClass="LoginViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zcv-Vy-LSa"/>
                         <viewControllerLayoutGuide type="bottom" id="Kdh-YZ-Pwt"/>
@@ -149,7 +149,7 @@
         <!--Feed View Controller-->
         <scene sceneID="464-CM-YJC">
             <objects>
-                <viewController id="lgU-4L-NPg" customClass="FeedViewController" customModule="ImmediatePhotoRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="lgU-4L-NPg" customClass="FeedViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0m3-ya-i2k"/>
                         <viewControllerLayoutGuide type="bottom" id="ne4-US-hcT"/>
@@ -162,7 +162,7 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedCell" rowHeight="420" id="IvM-qa-wil" customClass="FeedCell" customModule="ImmediatePhotoRecorder" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="FeedCell" rowHeight="420" id="IvM-qa-wil" customClass="FeedCell" customModule="Parstagram" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="92" width="375" height="420"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IvM-qa-wil" id="lUY-13-Xfx">
@@ -175,15 +175,15 @@
                                                         <constraint firstAttribute="width" secondItem="7Tl-ze-UZy" secondAttribute="height" multiplier="1:1" id="qxy-at-H72"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIl-gj-jYw">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LIl-gj-jYw">
                                                     <rect key="frame" x="8" y="383" width="60" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="13"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YgD-p8-kEi">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Likes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YgD-p8-kEi">
                                                     <rect key="frame" x="327" y="383" width="40" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="13"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -230,7 +230,7 @@
         <!--Upload View Controller-->
         <scene sceneID="Cqk-0S-tm7">
             <objects>
-                <viewController id="PGb-wh-aTG" customClass="UploadViewController" customModule="ImmediatePhotoRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="PGb-wh-aTG" customClass="UploadViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="zN6-F2-5qc"/>
                         <viewControllerLayoutGuide type="bottom" id="rTo-iS-XxT"/>
@@ -253,20 +253,16 @@
                                     <action selector="onImageButton:" destination="PGb-wh-aTG" eventType="touchUpInside" id="OUP-Xn-DBe"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csw-qI-bLP">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Csw-qI-bLP">
                                 <rect key="frame" x="153" y="496" width="69" height="25"/>
                                 <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="18"/>
                                 <inset key="contentEdgeInsets" minX="-12" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <state key="normal" title="Cancel" image="Home"/>
                                 <connections>
                                     <action selector="onCancel:" destination="PGb-wh-aTG" eventType="touchUpInside" id="w9h-WV-eHk"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Caption your image here" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="l0F-w2-rDy">
-                                <rect key="frame" x="25" y="341" width="325" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
-                            </textField>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="3oV-6X-tIe">
                                 <rect key="frame" x="35" y="335" width="305" height="3"/>
                             </progressView>
@@ -276,17 +272,23 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="111" id="50q-cW-BBD"/>
                                 </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="18"/>
                                 <state key="normal" title="Upload" image="uploadWhite"/>
                                 <connections>
                                     <action selector="onUpload:" destination="PGb-wh-aTG" eventType="touchUpInside" id="IHF-aE-AWK"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Upload Successful" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVd-Ls-osZ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Upload Successful" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MVd-Ls-osZ">
                                 <rect key="frame" x="111" y="379" width="153" height="19"/>
-                                <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="15"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                 <color key="textColor" red="0.25098040700000002" green="0.50196081400000003" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your caption..." textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="l0F-w2-rDy">
+                                <rect key="frame" x="25" y="341" width="325" height="30"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -329,7 +331,7 @@
         <!--Profile View Controller-->
         <scene sceneID="Z9V-od-MbQ">
             <objects>
-                <viewController storyboardIdentifier="ProfileViewController" id="jLC-IH-cz4" customClass="ProfileViewController" customModule="ImmediatePhotoRecorder" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ProfileViewController" id="jLC-IH-cz4" customClass="ProfileViewController" customModule="Parstagram" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Xip-BL-owW"/>
                         <viewControllerLayoutGuide type="bottom" id="Fho-BW-i9s"/>
